fixed the whitespace

--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,14 @@
     margin: 0;
     padding: 0;
 }
+html{
+    height: 100%;
+}
 
 body {
     margin: 0;
     font-family: 'Cairo', sans-serif;
-    height: 100%;
+    min-height: 100%;
   }
 
 #particles-js {
@@ -106,9 +109,9 @@ body {
 footer{
     text-align: center;
     position: absolute;
-    height: 180px;
+    height: 20px;
     margin: auto;
-    top: 100%;
+    top: 80%;
     left: 0;
     bottom: 0;
     right: 0;
@@ -190,6 +193,6 @@ section{
     }
     footer{
         font-size: .6rem;
-        top: 110%;
+        top: 90%;
     }
 }
